# churn_gym_mlops

./: .gitignore  README.md  pyproject.toml
artifacts/: catboost_model.cbm
artifacts/models/: catboost_model.cbm
configs/: inference.yaml  paths.yaml
data/: gym_churn.csv
notebooks/: 00_sanity_check.ipynb  01_load_and_validate.ipynb  02_preprocess.ipynb  03_feature_engineering.ipynb  04_train_catboost.ipynb
src/churn_gym/application/use_cases/: build_features.py  load_dataset.py  predict.py  preprocess_dataset.py  train_model.py
src/churn_gym/domain/entities/: feature_vector.py  member_record.py  model_artifact.py  prediction.py  raw_member_record.py
src/churn_gym/domain/interfaces/: dataset_repository.py  experiment_tracker.py  feature_engineering_pipeline.py  logger.py  model_predictor.py  model_trainer.py  prediction.py  preprocessing_pipeline.py  record_mapper.py
src/churn_gym/domain/services/: threshold_service.py
src/churn_gym/infrastructure/data_sources/: csv_loader_pandas.py
src/churn_gym/infrastructure/logging/: config.py  loguru_logger.py
src/churn_gym/infrastructure/ml/features/: advanced_feature_engineering.py  features_selection.py
src/churn_gym/infrastructure/ml/mappers/: raw_to_model_mapper.py
src/churn_gym/infrastructure/ml/models/: catboost_classifier.py
src/churn_gym/infrastructure/ml/predict/: catboost_predictor.py
src/churn_gym/infrastructure/ml/preprocessing/: preprocessing_pipeline.py  preprocessing_pipeline_ad.py  robust_preprocessing_pipeline.py
src/churn_gym/infrastructure/tracking/: mlflow_setup.py  mlflow_tracker.py
src/churn_gym/infrastructure/utils/: config_loader.py  exceptions.py  logger.py
