[tool.poetry]
name = "churn-gym-mlops"
version = "0.1.0"
description = "Clean Architecture MLOps project for Gym Churn Prediction (CatBoost-focused)"
authors = ["Manda Surel <s239150.eps@gmail.com>"]
readme = "README.md"
packages = [{ include = "churn_gym", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# =========================
# Core scientific stack
# =========================
numpy = "^1.26"
pandas = "^2.1"

# =========================
# Machine Learning
# =========================
catboost = "^1.2"
xgboost = { version = "^2.0", optional = true }
lightgbm = { version = "^4.1", optional = true }
scikit-learn = "^1.4"

# =========================
# Experiment tracking
# =========================
mlflow = "^2.10"

# =========================
# API / Serving
# =========================
fastapi = "^0.111"
uvicorn = { version = "^0.30", extras = ["standard"] }
pydantic = "^2.6"

# =========================
# Config & utils
# =========================
pyyaml = "^6.0"
python-dotenv = "^1.0"
joblib = "^1.3"

# =========================
# Notebooks
# =========================
jupyterlab = "^4.1"
ipykernel = "^6.29"

# =========================
# Logging & monitoring
# =========================
loguru = "^0.7"

# =========================
# Typing
# =========================
typing-extensions = "^4.10"
seaborn = "^0.13.2"

[tool.poetry.extras]
xgboost = ["xgboost"]
lightgbm = ["lightgbm"]

# ======================================================
# Dev dependencies (tests, lint, format, CI)
# ======================================================
[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
mypy = "^1.10"
black = "^24.4"
isort = "^5.13"
ruff = "^0.4"
pre-commit = "^3.7"

# ======================================================
# Black
# ======================================================
[tool.black]
line-length = 100
target-version = ["py310"]

# ======================================================
# Isort
# ======================================================
[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

# ======================================================
# Ruff
# ======================================================
[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# ======================================================
# Mypy
# ======================================================
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["notebooks/"]

# ======================================================
# Pytest
# ======================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=churn_gym"
testpaths = ["tests"]